# rit_ws

devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/pkgconfig/: gazebo_tutorials.pc  rit_head_description.pc  rit_head_gazebo.pc  rrbot_control.pc  rrbot_description.pc  rrbot_gazebo.pc
devel/share/gazebo_tutorials/cmake/: gazebo_tutorialsConfig.cmake
devel/share/rit_head_description/cmake/: rit_head_descriptionConfig.cmake
devel/share/rit_head_gazebo/cmake/: rit_head_gazeboConfig.cmake
devel/share/rrbot_control/cmake/: rrbot_controlConfig.cmake
devel/share/rrbot_description/cmake/: rrbot_descriptionConfig.cmake
devel/share/rrbot_gazebo/cmake/: rrbot_gazeboConfig.cmake
src/rit_head/rit_head_description/: CMakeLists.txt  package.xml
src/rit_head/rit_head_description/meshes/: base.STL  cam.STL  disc.STL  servo.STL  servo_arm(x3).STL  sharp.STL  thanh-dinh-co(x2).STL
src/rit_head/rit_head_description/urdf/: rit_head.gazebo  rit_head.xacro  rit_head.xacro~
src/rit_head/rit_head_gazebo/: CMakeLists.txt  package.xml
src/rit_head/rit_head_gazebo/launch/: rit_head_gazebo.launch  rit_head_gazebo.launch~
src/rit_head/rit_head_gazebo/worlds/: rit_head_gazebo.world
